# qjackctl

./: .gitignore  CMakeLists.txt
cmake/: Utils.cmake
src/: qjackctlMainForm.cpp  qjackctlMainForm.h  qjackctlMainForm.ui  qjackctlSetup.cpp  qjackctlSetup.h
